playing with dynamic array implementations

--- a/012_array_sequences/003_dynamic_array_implementation.ipynb
+++ b/012_array_sequences/003_dynamic_array_implementation.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "id": "1c1712ae-cba8-461c-a30a-4fd8a5acf4a8",
    "metadata": {},
    "outputs": [],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "id": "894afa9d-3cda-4a37-8d9d-538444454824",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "2"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "id": "c7f1965a-7483-4626-a075-f7482aa0daa3",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "'a'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "id": "29559489-ec98-4a9a-8873-01abb9be2765",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.DynamicArray2 object at 0x00000250F6937430>\n"
+      "<__main__.DynamicArray2 object at 0x00000250F6927DF0>\n"
      ]
     }
    ],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 125,
    "id": "c89c585d-c9c3-4317-969b-8157191b7564",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "2"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "id": "41fffe6c-638c-4912-8747-5ed649743475",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "IndexError('k index is out of bounds.')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
