correction - edit self._resize()

--- a/012_array_sequences/003_dynamic_array_implementation.ipynb
+++ b/012_array_sequences/003_dynamic_array_implementation.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 127,
    "id": "88a01557-6595-4e36-9dad-966ff218c757",
    "metadata": {},
    "outputs": [],
@@ -220,6 +220,7 @@
     "            B[index] = self.A[index]\n",
     "\n",
     "        self.A = B  # reassign(rename) B as A\n",
+    "        self.capacity = capacity  # update the capacity\n",
     "\n",
     "    def append(self, element):\n",
     "\n",
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 128,
    "id": "21d8abe7-c55a-4fd9-a9d4-76c469d703bc",
    "metadata": {},
    "outputs": [],
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 129,
    "id": "0717809e-51d1-4df4-910c-efc9ef335d23",
    "metadata": {},
    "outputs": [
@@ -252,7 +253,7 @@
        "0"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 130,
    "id": "2766ac11-0ccc-4c58-a67c-eecd2d85d606",
    "metadata": {},
    "outputs": [],
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 131,
    "id": "3a179b27-c669-4c85-881d-54593a4cbd1a",
    "metadata": {},
    "outputs": [
@@ -283,7 +284,7 @@
        "1"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 132,
    "id": "d3153bb8-ba42-4dcd-ad2d-33e463f42676",
    "metadata": {},
    "outputs": [
@@ -304,7 +305,7 @@
        "11"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 133,
    "id": "1c1712ae-cba8-461c-a30a-4fd8a5acf4a8",
    "metadata": {},
    "outputs": [],
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 134,
    "id": "894afa9d-3cda-4a37-8d9d-538444454824",
    "metadata": {},
    "outputs": [
@@ -335,7 +336,7 @@
        "2"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 135,
    "id": "c7f1965a-7483-4626-a075-f7482aa0daa3",
    "metadata": {},
    "outputs": [
@@ -356,7 +357,7 @@
        "'a'"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 136,
    "id": "29559489-ec98-4a9a-8873-01abb9be2765",
    "metadata": {},
    "outputs": [
@@ -375,7 +376,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.DynamicArray2 object at 0x00000250F6927DF0>\n"
+      "<__main__.DynamicArray2 object at 0x00000250F6934F70>\n"
      ]
     }
    ],
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 137,
    "id": "c89c585d-c9c3-4317-969b-8157191b7564",
    "metadata": {},
    "outputs": [
@@ -395,7 +396,7 @@
        "2"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 138,
    "id": "41fffe6c-638c-4912-8747-5ed649743475",
    "metadata": {},
    "outputs": [
@@ -416,7 +417,7 @@
        "IndexError('k index is out of bounds.')"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
